cleaned up html / css readability and fixed several bugs with elements not displaying properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 }
 
 /* Root variable declarations */
-
 :root {
     --primary-color: red;
     --secondary-color: blue;
@@ -16,6 +15,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: wheat;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 header {
@@ -65,10 +68,101 @@ header nav ul li a {
     background-image: url("../images/bg-crop.png");
     background-size: cover;
     background-position: 80%;
+    display: flex; 
+}
+
+.hero-content {
+    margin: 3.5%;
+}
+
+.flex-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Hero Section End */
+
+.container {
+    margin: 30px;
+    justify-content: center;
     display: flex;
 }
 
-.hero-ctn {
-    width: 35%;
-    margin: 3.5%;
+.header-container {
+    text-align: right;
+    display: flex;
+    justify-content: right;
+    width: 10%;
+    margin-left: 100px;
 }
+
+.header-container h2 {
+    font-size: 3.55vmax;
+    padding: 5px 20px;
+}
+
+.content-container {
+    width: 80%;
+    border-left: 3px solid var(--primary-color); 
+    display: flex;
+    padding: 5px 50px;
+}
+
+.content-container p {
+    text-align: left;
+}
+
+.images-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%; 
+}
+
+.img-container {
+     display: flex;
+     flex-wrap: wrap;
+     width: 50%;
+}
+
+.img-container a {
+    background-image: url(https://via.placeholder.com/728x90.png);
+    background-size: cover;
+    border: 5px solid var(--tertiary-color);
+    margin: 20px;
+    width: 100%;
+}
+
+.contact {
+    width: 80%;
+    border-left: 3px solid var(--primary-color); 
+    display: flex;
+    padding: 5px 50px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.contact a {
+    justify-content: space-between;
+    align-content: center;
+    font-size: 2vmax;
+    padding: 2px 10px;
+    border-bottom: 5px solid blue;
+    text-decoration: none;
+}
+
+footer {
+    margin-top: auto;
+    width: 100%;
+    padding: 40px 35px;
+    background-color: var(--tertiary-color);
+    bottom: 0;
+}
+
+/* LEFT OFF HERE */ 
+
+/* IF NECESSARY https://stackoverflow.com/questions/25218371/layout-breaks-on-browser-resize */
+/* perhaps the reson things break is due to the fact that we are using percentages as opposed to pixels? */
+
+/* a / h2 element breaking page? https://stackoverflow.com/questions/20304472/how-to-make-the-font-size-smaller-when-i-resize-the-browser */ 
